# services

./: .gitignore  pyproject.toml
services/firestore-crud-api-assessment02/: main.py  requirements.txt
services/pub-sub-assessment03/: main.py  requirements.txt
